--- a/README.Rmd
+++ b/README.Rmd
@@ -24,10 +24,11 @@ output:
 
 ## Updating packages
 
-The Cgywin distribution ships only base packages by default. The executable `setup-x86.exe` provides updates and serves to install new packages.
+The Cgywin distribution ships only base packages by default. The executable `setup-x86.exe` provides updates and serves to install new packages. You can also acccess setup functionality via the Cgywin shell, for example:
 
-```{bash}
-# Add terminal command
+```{bash, eval=FALSE}
+# Change to the directory where `setup-x86_64.exe` is located
+setup-x86_64.exe -q -P wget -P gcc-g++ -P make -P diffutils -P libmpfr-devel -P libgmp-devel -P libmpc-devel
 ```
 
 ## Mounted drives
