--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ output:
 
 ## Updating packages
 
-The Cgywin distribution ships only base packages by default. The executable `setup-x86.exe` provides updates and serves to install new packages. You can also acccess setup functionality via the Cgywin shell, for example:
+The Cgywin distribution ships only base packages by default. The executable `setup-x86.exe` provides updates and serves to install new packages. You can also access setup functionality via the Cgywin shell, for example:
 
 ```{bash, eval=FALSE}
 # Change to the directory where `setup-x86_64.exe` is located
