--- a/README.Rmd
+++ b/README.Rmd
@@ -35,3 +35,57 @@ setup-x86_64.exe -q -P wget -P gcc-g++ -P make -P diffutils -P libmpfr-devel -P 
 
 All system drives such as `C:` are mapped under `/cgydrive`, for example `C:` can be accessed via `/cgydrive/c`.
 
+
+## Backup
+
+Below is an example how to backup spektrometer sofware located in public documents to a NAS mounted as `Q:`. Copy this shell script in a text file called `backup-pdocs.sh` in the Cgywin home folder (see [here](https://www.howtogeek.com/175008/the-non-beginners-guide-to-syncing-data-with-rsync/) to get a glimpse of the magic):
+
+```{bash, eval=FALSE}
+#!/bin/bash
+
+# copy old time.txt to time2.txt
+yes | cp ~/backup/time.txt ~/backup/time2.txt
+
+# overwrite old time.txt file with new time
+echo `date +”%F-%I%p”` > ~/backup/time.txt
+
+# make the log file
+echo “” > ~/backup/rsync-`date +”%F-%I%p”`.log
+
+# rsync command
+rsync -avzhPR --chmod=Du=rwx,Dgo=rx,Fu=rw,Fgo=r --delete --stats --log-file=~/backup/rsync-`date +”%F-%I%p”`.log --link-dest=/cygdrive/c/Users/Public/Documents/Bruker/`cat ~/backup/time2.txt` /cygdrive/c/Users/Public/Documents/Bruker /cygdrive/q/INSTRUMENT-PCs-BACKUP/Bruker/`date +”%F-%I%p”`/
+
+# don’t forget to (s)cp the log file and put it with the backup
+cp ~/backup/rsync-`cat ~/backup/time.txt`.log /cygdrive/q/INSTRUMENT-PCs-BACKUP/Bruker/`cat ~/backup/time.txt`/rsync-`cat ~/backup/time.txt`.log
+```
+
+Then, make it executable with
+
+```{bash, eval=FALSE}
+chmod +x ~/backup-pdocs.sh
+```
+
+Last but not least, install the `doc2unix` utility to change from two-character linebreaks (DOS/Windows) to one-character (line feed; Unix):
+
+```{bash, eval=FALSE}
+# change to the folder that contains the executable (in Cgywin shell)
+setup-x86_64.exe -q -P dos2unix
+```
+
+Then, convert it with
+
+```{bash, eval=FALSE}
+dos2unix ~/backup-pdocs.sh
+```
+
+Rock'n'roll backup is done like this:
+
+```{bash, eval=FALSE}
+# Create first time file
+mkdir ~/backup
+touch ~/backup/time.txt
+# Backup
+./backup-pdocs.sh
+```
+
+
