Fix fatal misspelling

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Cgywin: Taking back control over Windows (lab computers)"
+title: "Cygwin: Taking back control over Windows (lab computers)"
 author: "Philipp Baumann || philipp.baumann@usys.ethz.ch"
 output: 
   github_document:
@@ -20,11 +20,11 @@ output:
 
 ## Overview
 
-[Cgywin](https://cygwin.com/) is aimed at bringing Unix tools to the Windows environment. This repo contains an opinionated set of recipes, and is particularly tailored to people suffering from Windows computers of measurement devices in laboratories.
+[Cygwin](https://cygwin.com/) is aimed at bringing Unix tools to the Windows environment. This repo contains an opinionated set of recipes, and is particularly tailored to people suffering from Windows computers of measurement devices in laboratories.
 
 ## Updating packages
 
-The Cgywin distribution ships only base packages by default. The executable `setup-x86.exe` provides updates and serves to install new packages. You can also access setup functionality via the Cgywin shell, for example:
+The Cygwin distribution ships only base packages by default. The executable `setup-x86.exe` provides updates and serves to install new packages. You can also access setup functionality via the Cygwin shell, for example:
 
 ```{bash, eval=FALSE}
 # Change to the directory where `setup-x86_64.exe` is located
@@ -38,7 +38,7 @@ All system drives such as `C:` are mapped under `/cygdrive`, for example `C:` ca
 
 ## Backup
 
-Below is an example how to backup spektrometer sofware located in public documents to a NAS mounted as `Q:`. Copy this shell script in a text file called `backup-pdocs.sh` in the Cgywin home folder (see [here](https://www.howtogeek.com/175008/the-non-beginners-guide-to-syncing-data-with-rsync/) to get a glimpse of the magic):
+Below is an example how to backup spektrometer sofware located in public documents to a NAS mounted as `Q:`. Copy this shell script in a text file called `backup-pdocs.sh` in the Cygwin home folder (see [here](https://www.howtogeek.com/175008/the-non-beginners-guide-to-syncing-data-with-rsync/) to get a glimpse of the magic):
 
 ```{bash, eval=FALSE}
 #!/bin/bash
@@ -68,7 +68,7 @@ chmod +x ~/backup-pdocs.sh
 Last but not least, install the `dos2unix` utility to change from two-character linebreaks (DOS/Windows) to one-character (line feed; Unix):
 
 ```{bash, eval=FALSE}
-# change to the folder that contains the executable (in Cgywin shell)
+# change to the folder that contains the executable (in Cygwin shell)
 setup-x86_64.exe -q -P dos2unix
 ```
 
